<resources>
    <string name="app_name">Jadwal Buchin</string>
    <string name="home">Home</string>
    <string name="teachers">Teachers</string>
    <string name="grades">Grades</string>
    <string name="holidays">Holidays</string>
    <string name="reminders">Reminders</string>
    <string name="homeworks">Homeworks</string>
    <string name="tests">Tests</string>
    <string-array name="day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="not_a_member_text">Not A Member?</string>
    <string name="already_a_member_text">Already A Member?</string>
    <string name="register_now">Register Now</string>
    <string name="login_now">Login Now</string>
    <string name="full_name">Full Name</string>
    <string name="success_message">Registration Successful</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Error Message-->
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_email_exists">Email Already Exsits</string>
</resources>
