<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_teachers"
            android:title="@string/teachers"
            android:icon="@drawable/ic_people_grey_24dp" />

        <item android:id="@+id/nav_holidays"
            android:title="@string/holidays"
            android:icon="@drawable/ic_wb_sunny_grey_24dp" />

        <item android:id="@+id/nav_reminders"
            android:title="@string/reminders"
            android:icon="@drawable/ic_notifications_active_black_24dp" />

        <item android:id="@+id/nav_homeworks"
            android:title="@string/homeworks"
            android:icon="@drawable/ic_edit_grey_24dp" />

    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_delete_white_24dp"/>
    </group>
</menu>