<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    tools:context=".LoginActivity">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_round"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHighlight="@color/colorYellow"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_round"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHighlight="@color/colorYellow"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:background="@color/colorYellow"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_a_member_text"
                android:textColor="@color/colorWhite" />
            <Button
                android:id="@+id/btn_register_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/none"
                android:textColor="@color/colorYellow"
                android:text="@string/register_now"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>